--- a/src/MA/MainBundle/Resources/translations/messages.fr.yml
+++ b/src/MA/MainBundle/Resources/translations/messages.fr.yml
@@ -22,6 +22,7 @@ sideButtons:
         ecoliers:               Les écoliers
         etudiants:              Les étudiants
         jeunesPro:              Les jeunes pro
+        nosBesoins:             Nos besoins
         actu:                   "L'actualité"
         footer:                 Bas de page
 
